# typefully-cli

./: .cursorrules  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  LICENSE  README.md  demo.tape  rustfmt.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
skills/typefully-cli/: SKILL.md
skills/typefully-cli/references/: commands.md
src/: error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  types.rs
src/cli/: mod.rs
src/config/: mod.rs
src/output/: mod.rs
