[package]
name = "typefully"
version = "0.1.0"
edition = "2024"
description = "A full-featured CLI client for the Typefully API v2"
license = "MIT"
repository = "https://github.com/ricardodantas/typefully-cli"
keywords = ["typefully", "cli", "social-media", "twitter", "scheduling"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "3"
tabled = "0.18"
dirs = "6"
dialoguer = "0.11"

[profile.release]
strip = true
lto = true
