[package]
name = "typefully"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "A full-featured CLI client for the Typefully API v2"
license = "GPL-3.0-only"
repository = "https://github.com/ricardodantas/typefully-cli"
keywords = ["typefully", "cli", "social-media", "twitter", "scheduling"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "3"
tabled = "0.18"
dirs = "6"
dialoguer = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = { version = "0.10", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
mockall = "0.13"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
strip = true
lto = true
